Correction puce et alignement liste-texte

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body
 
 .section_left
 {
-	width: 40%;
+	width: 600px;
 	font-size: 0.8em;
 	background-color: #1E88E5;
 	display: flex;
@@ -114,7 +114,7 @@ h1 span
 	border-bottom: 1px solid #1E88E5;
 }
 
-.form_cont
+.bloc
 {
 	display: flex;
 }
@@ -149,9 +149,9 @@ h1 span
 
 h3
 {
-	position: relative;
-	top: 20px;
 	font-size: 1em;
+	position: relative;
+	top: 10px;
 }
 
 .form span, .exp span
@@ -165,6 +165,7 @@ h3
 .text p
 {
 	font-size: 0.8em;
+
 }
 
 .form h2, .exp h2, .comp h2
@@ -206,4 +207,39 @@ h3
 {
 	position: relative;
 	top: 35px;
+}
+
+.list_comp
+{
+	display: list-item;
+}
+
+.eng
+{
+	list-style-image: url(images/anglais.jpg);
+}
+
+.fr
+{
+	list-style-image: url(images/francais.jpg);
+}
+
+.css
+{
+	list-style-image: url(images/css.jpg);
+}
+
+.html
+{
+	list-style-image: url(images/html.jpg);
+}
+
+.js
+{
+	list-style-image: url(images/js.jpg);
+}
+
+.git
+{
+	list-style-image: url(images/git.jpg);
 }
